Create ana Auth for middleware

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,12 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./src/@types",
+      "./custom_typings",
+      "./@types",
+      "./node_modules/@types"
+    ]                                 /* Skip type checking all .d.ts files. */
   }
 }
